@@ -1,6 +1,8 @@
 v3.7.5 (XXXX-XX-XX)
 -------------------
 
+* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.
+
 * If a collection (or database) is dropped during the instantiation of an AQL
   query, the setup code now aborts with an ERROR_QUERY_COLLECTION_LOCK_FAILED
   and earlier.
